<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joe.stopwatch.activities.NameThatActivity">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/chooseExisitng"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/ActivityNameSpinner"
        android:layout_width="381dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_green_light"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/ActivityNameField"
        android:layout_width="213dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/place_holder"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityNameSpinner"/>

    <Button
        android:id="@+id/StartActivityButton"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/addAct"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="startTimerActivity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/otherButton"
        android:onClick="changeLayout"/>

    <Button
        android:id="@+id/otherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/other"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityNameField"
        android:onClick="changeLayout"/>

    <Spinner
        android:id="@+id/timingStyleSpinner"
        android:layout_width="381dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTimingStyle"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/chooseTimingStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chooseTimingStyle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelButton" />
</android.support.constraint.ConstraintLayout>
